# rust-job-runner

./: .gitignore  .justfile  Cargo.toml  README.md  bacon.toml  build.rs
data/tls/: client1.key  client1.pem  client2.key  client2.pem  client3.key  client3.pem  client_ca.key  client_ca.pem  server.key  server.pem  server_ca.key  server_ca.pem
proto/: jobs.proto
scripts/: gen-certs.sh  sync-win.sh
src/: grpc.rs  lib.rs  utils.rs
src/pb/: jobs.rs
src/proc/: coord.rs  mod.rs  types.rs
src/proc/spawn/: mod.rs  win.rs
