[package]
name = "jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13.3"
thiserror = "1.0.64"
futures = "0.3.31"
anyhow = "1.0.89"
tokio-stream = "0.1.16"
chrono = "0.4.38"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v7"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-test = "0.2.5"
test-log = { version = "0.2.16", features = ["trace"] }
clap = { version = "4.5.20", features = ["derive"] }
rustls = { version = "0.23.14", features = ["aws_lc_rs"] }
x509-parser = "0.16.0"
cfg-if = "1.0.0"
windows = { version =  "0.58.0", features = [
  "Win32_Storage_FileSystem",
  "Win32_System_JobObjects",
  "Win32_System_Diagnostics",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Foundation",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_Pipes",
  "Win32_Security",
  "Win32_System_ProcessStatus",
]}
windows-result = "0.2.0"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[features]
# for tests which may be expensive
integration_test = []
